changed fonts, added images from cloud, mobile version of home page

--- a/item.html
+++ b/item.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Shop Earrings - Rumplestilt | ISO.IDA | Demi-Fine Handmade Jewelry</title>
+		<link rel="stylesheet" href="https://use.typekit.net/btj1uvo.css">
 		<link href="CSS/style.css" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
 	</head>
