repositioned submit email button

--- a/index.html
+++ b/index.html
@@ -102,7 +102,16 @@
 		
 		<footer>
 			<div class="footerTop">
-				<div class="footerTopLeft">
+				<div class="footerTopRight">
+
+					<h3>KEEP IN TOUCH</h3>
+					<p>Info on new arrivals, early access and extras.</p>
+					<div>
+						<input type="email" placeholder="Your Email"><div id="footerSubmitEmail" class="material-icons-outlined">keyboard_arrow_right</div>
+					</div>
+				</div>
+			
+			<div class="footerTopLeft">
 					<div class="footerMenu">
 					<h3>SHOP</h3>
 						<ul>
@@ -121,15 +130,8 @@
 						</ul>
 					</div>
 				</div>
-				
-				<div class="footerTopRight">
+							</div>
 
-					<h3>KEEP IN TOUCH</h3>
-					<p>Info on new arrivals, early access and extras.</p>
-					<input type="email" placeholder="Your Email"><span id="footerSubmitEmail" class="material-icons-outlined">keyboard_arrow_right</span>
-				</div>
-			</div>
-			
 			<div class="footerBottomPrint">
 			
 				<p>DEMI-FINE HANDCRAFTED JEWELRY IN N.Y.C.</p>
