--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	
 	<head>
 		<meta charset="utf-8">
+		<meta name="description" content="Shop Demi-Fine Handmade Jewelry.">
 		<link rel="stylesheet" href="https://use.typekit.net/btj1uvo.css">
 		<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
 		<link rel="stylesheet" href="CSS/style.css">
@@ -82,7 +83,7 @@
 			
 			<section id="homeSectionStyling">
 				<h2>STYLING</h2>
-				<div id="homeStyling">
+				<div class="homeStyling">
 					<div class="homeStylingImages">
 					<img src="https://s3.amazonaws.com/iso.ida/Images/Home/QueenPurple.jpeg" alt="Female model reading book and wearing purple dress and displaying earrings">
 					</div>
