--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="https://use.typekit.net/btj1uvo.css">
 		<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
 		<link rel="stylesheet" href="CSS/style.css">
+		<script src="JavaScript/javascript.js" language="javascript"></script>
 		<title>ISO.IDA | Demi-Fine Handmade Jewelry</title>
 	</head>
 
@@ -28,8 +29,8 @@
 					<div id="menu">
 						<div id="menuDropDown">
 							<div class="menuSection">
-								<span>Shop</span>
-									<ul class="menuList">
+								<span onclick="">Shop</span>
+									<ul class="menuList" id="menuListShop">
 										<li class="menuDropDown-item1"><a href="earrings.html">Earrings</a></li>
 										<li class="menuDropDown-item2"><a href="">Necklaces</a></li>
 										<li class="menuDropDown-item3"><a href="">Rings</a></li>
@@ -37,8 +38,8 @@
 							</div>
 					
 							<div class="menuSection">
-								<span>About</span>
-									<ul class="menuList">
+								<span onClick="">About</span>
+									<ul class="menuList" id="menuListAbout">
 										<li class="menuDropDown-item1"><a href="">Meet us!</a></li>
 										<li class="menuDropDown-item2"><a href="">FAQ</a></li>
 										<li class="menuDropDown-item3"><a href="">Contact us</a></li>
@@ -116,7 +117,7 @@
 					<div class="footerMenu">
 					<h3>SHOP</h3>
 						<ul>
-							<li><a href="">EARRINGS</a></li>
+							<li><a href="earrings.html">EARRINGS</a></li>
 							<li><a href="">NECKLACES</a></li>
 							<li><a href="">RINGS</a></li>
 						</ul>
